add code comment about configs

--- a/vnegmas/backend/src/configs/real_time.ini
+++ b/vnegmas/backend/src/configs/real_time.ini
@@ -1,10 +1,10 @@
 [mode]
-onlineserial = True
-onlinefileparallel = False
+onlineserial = False
+onlinefileparallel = True
 
 [charts]
 contractsigned = True
 productproduce = False
 buyerandseller = True
-negmasagentsactivationlevel = True
+negmasagentsactivationlevel = False
 
