add register new charts example

--- a/vnegmas/backend/src/configs/real_time.ini
+++ b/vnegmas/backend/src/configs/real_time.ini
@@ -1,10 +1,29 @@
 [mode]
-onlineserial = False
-onlinefileparallel = True
+onlineserial = True
+onlinefileparallel = False
 
 [charts]
-contractsigned = True
+contractsigned = False
 productproduce = False
-buyerandseller = True
+buyerandseller = False
 negmasagentsactivationlevel = False
+n_cfps_on_board_before = False
+n_registered_negotiations_before = False
+n_contracts_executed = False
+n_contracts_cancelled = False
+n_breaches = False
+breach_level = False
+n_contracts_signed = False
+n_contracts_concluded = False
+n_negotiations = False
+n_negotiation_rounds_successful = False
+n_negotiation_rounds_failed = False
+n_registered_negotiations_after = False
+activity_level = False
+n_cfps = False
+n_cfps_on_board_after = False
+n_contracts_nullified = False
+n_bankrupt = False
+_balance_bank = False
+_balance_society = False
 
